# dhcp-rs

./: Cargo.toml
src/: allocationunit.rs  allocator.rs  frame.rs  handler.rs  interface.rs  lease.rs  main.rs  packet.rs  pool.rs  serialize.rs
src/config/: ippool.rs  mod.rs
src/frame/: ethernet.rs  ip4.rs  mod.rs  udp.rs
src/packet/: mod.rs  name.rs
