[package]
name = "dhcp"
version = "0.1.0"
authors = ["root"]

[dependencies]
byteorder = "1.1.0"
pnet = "0.20.0"
time = "*"
serde = "1.0.*"
serde_derive = "*"
serde_json = "*"
quickcheck = "*"

[dependencies.rs-config]
git = "https://github.com/Ongy/config-rs"

[dependencies.rs-config-derive]
version= "*"
git = "https://github.com/Ongy/config-rs"

